--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,1 +1,11 @@
+/* @import url('https://fonts.googleapis.com/css2?family=Prompt:wght@400;600&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Itim&display=swap');
 @import "tailwindcss";
+
+
+:root {
+  font-family: 'Prompt', sans-serif;
+  font-family: "Itim", cursive;
+}
+
+
